--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap');
 
 
@@ -26,3 +25,8 @@ hr {
 #MainMenu {visibility: hidden;}
 footer {visibility: hidden;}
 header {visibility: hidden;}
+
+body {
+    background-color: #f7f7f7; /* add a light gray background color */
+    padding: 20px; /* add some padding to the body element */
+}
